Fix print color not showing on Chrome

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
 
 body {
   print-color-adjust: exact;
+  -webkit-print-color-adjust: exact;
   font-family: Arial, Helvetica, sans-serif;
   background-color: white;
   margin: 0;
